# gradient-learning

./: .env.example  .gitignore  .gitmodules  .worktreeinclude  CLAUDE.md  FORMAT.md  README.md  SPEC.md  alembic.ini  docker-compose.yml  mise.local.example.toml  mise.toml  pyproject.toml
.air/: settings.json  worktree.json
.claude/: document.md  settings.json
.claude/hooks/: worktree-create.sh  worktree-remove.sh
.githooks/: post-checkout
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_source_discriminator.py  0003_kb_substrate.py  0004_atomic_fact_tags.py  0005_atomic_fact_extractor.py  0006_correct_choice_nullable.py  0007_question_course_id.py  2026_05_13_ticket_1_2_topic_tree.py  2026_05_13_ticket_2_1_captures.py  2026_05_14_ticket_3_3_llm_categorizer.py  2026_05_15_ticket_3_5_canonicalize_outputs.py  2026_05_15_ticket_4_1_question_features.py  2026_05_16_bug_16_tag_override.py  2026_05_16_ticket_6_9b_task_runs.py  2026_05_16_ticket_6_9c_attempt_notes.py  2026_05_16_ticket_6_9d_uworld_test_id.py  2026_05_17_issue_28_strip_explanation_boilerplate.py  2026_05_17_ticket_6_8_relax_depth_constraint.py  2026_05_17_ticket_7_1_fix_drop_target_check.py  2026_05_17_ticket_7_1_study_plan_items.py  2026_05_19_ticket_t2_anki_cards.py  2026_05_19_ticket_t31_anki_cc_link.py  2026_05_20_ticket_t32_anki_tag_source.py  2026_05_20_ticket_t34_aamc_skill.py  2026_05_20_ticket_t35_anki_card_reviews.py  2026_05_20_ticket_t51_llm_batch_runs.py  2026_05_21_t58_anki_assignments.py  2026_05_21_t59_anki_writes.py  2026_05_21_t60_anki_review_pushes.py  2026_05_21_t61_anki_load_config.py  2026_05_23_t76_anki_reviews_rename.py  2026_05_23_t79_drop_phase7_study_plan.py  2026_05_24_ticket_t93_anki_notes.py  2026_05_24_ticket_t95_drop_anki_card_tags.py  2026_05_26_t1_outline_nodes.py  2026_05_26_t2_node_id_tags.py
app/: config.py  database.py  kb_config.py  main.py  scheduler.py  startup.py
app/api/: deps.py
app/api/v1/: admin.py  analytics.py  analyzer.py  anki.py  anki_assign.py  anki_load.py  anki_review.py  attempts.py  captures.py  kb_reads.py  outline.py  pdf.py  pkm.py  recommendations.py  tutor.py
app/models/: __init__.py  anki.py  atomic_fact.py  atomic_fact_tag.py  attempt_note.py  captures.py  concept_edge.py  content_embedding.py  discriminator_factor.py  features.py  llm_batch.py  media.py  notion_page.py  outline.py  pdf_source.py  task_run.py
app/schemas/: analytics.py  analyzer.py  anki.py  anki_assign.py  anki_load.py  anki_review.py  attempt_notes.py  captures.py  pdf.py  pkm.py  recommendations.py
app/seeds/: aamc_outline.json  aamc_outline.schema.json
app/services/: admin_tags.py  analytics.py  attempt_notes.py  ingest.py  media_store.py  outline_subtree.py  recommender.py  system_status.py  topic_subtree.py
app/services/adapters/: __init__.py  extension_capture.py  manual.py  uworld.py  web_qbank.py
app/services/analyzer/: __init__.py  cache.py  feature_extractor.py  mechanical_features.py  patterns.py  synthesizer.py  (+3 more)
app/web/: media.py
docs/: BACKEND_CORE.md  PROMPT_OUTLINE_SCHEMA.md  openapi.json
scripts/: check_under_specific_categorizations.py  compare_categorizer_v5_baseline.py  compare_topic_resolver_v3_v4.py  drop_env_database.sh  eval_categorizer_models.py  extract_features.py  extract_features_sample.py  run_anki_topic_resolver_batch.py  run_categorizer.py  run_v_l2_gate.py  seed_dev.py  seed_outline.py  setup_worktree_codex.sh
tests/: _openai_mocks.py  conftest.py  test_admin_status.py  test_analytics.py  test_analyzer_endpoint.py  test_anki_api.py  test_anki_assign_api.py  test_anki_assignment_complete_job.py  test_anki_assignment_service.py  test_anki_assignment_unlock_job.py  test_anki_assignments_schema.py  test_anki_client.py  test_anki_integration.py  test_anki_load_adherence.py  test_anki_load_api.py  test_anki_load_config_schema.py  test_anki_note_schema.py  test_anki_performance.py  test_anki_queries_smoke.py  test_anki_read_api.py  test_anki_retention.py  test_anki_review.py  test_anki_review_api.py  test_anki_review_metrics.py  test_anki_review_schema.py  test_anki_reviews_schema.py  test_anki_schema.py  test_anki_state.py  test_anki_sync.py  test_anki_tag_parser.py  test_anki_topic_resolver.py  test_anki_topic_resolver_batch.py  test_anki_writes_schema.py  test_attempt_notes.py  test_auth_global.py  test_backend_only_seam.py  test_calibrator.py  test_capture_to_tag_e2e.py  test_captures_schema.py  test_categorizer_cache.py  (+68 more)
tests/fixtures/: v_l2_claude_baseline.json
(+117 files in other folders)
