[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gradient-server"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "openai>=1.50",
    "apscheduler>=3.10",
    "asyncpg>=0.29",
    "beautifulsoup4>=4.12",
    "fastapi>=0.115",
    "httpx>=0.27",
    "jsonschema>=4.23",
    # P2 KB substrate (V-KB2):
    "notion-client>=2.2",
    "pdfplumber>=0.11",
    "pgvector>=0.3",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.30",
    "pymupdf>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
# conftest must set os.environ (test-config isolation, T40/V-TC1) BEFORE any
# app.config import builds the settings singleton — imports cannot move to top.
"tests/conftest.py" = ["E402"]

[tool.pyright]
# LSP + CLI type checker (matches Claude Code's official pyright-lsp plugin).
# Points at uv's .venv so imports resolve. "basic" keeps an existing codebase
# manageable; tighten to "standard"/"strict" per-area later.
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
include = ["app"]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
]
